<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".config.SceneConfig">

    <include layout="@layout/content_list"/>

    <Button
            android:id="@+id/set_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_music"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_start_effect" />

    <Button
            android:id="@+id/scene_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_scene"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_ambience" />

    <EditText
            android:id="@+id/scene_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/scene_name"
            android:ems="10"
            android:hint="@string/scene_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/set_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scene_name" />

    <Button
            android:id="@+id/set_start_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_start_effect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_light" />

    <Button
            android:id="@+id/set_ambience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_ambience"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_music" />

    <TextView
            android:id="@+id/selected_ambience"
            android:layout_width="150dp"
            android:layout_height="33dp"
            android:text="@string/trackname_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_music" />

    <TextView
            android:id="@+id/selected_effect"
            android:layout_width="150dp"
            android:layout_height="33dp"
            android:text="@string/trackname_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_light" />

    <TextView
            android:id="@+id/selected_music"
            android:layout_width="150dp"
            android:layout_height="33dp"
            android:text="@string/trackname_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_start_effect" />

    <ImageView
            android:id="@+id/selected_color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toEndOf="@+id/set_light"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>