<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.light.LightConfiguration">

    <com.flask.colorpicker.ColorPickerView
            android:id="@+id/color_picker_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alphaSlider="true"
            app:alphaSliderView="@+id/v_alpha_slider"
            app:density="12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lightnessSlider="true"
            app:lightnessSliderView="@+id/v_lightness_slider"
            app:wheelType="CIRCLE" />

    <Button
            android:id="@+id/light_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
            android:id="@+id/brightness_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:max="255"
            android:progress="255"
            app:layout_constraintTop_toBottomOf="@+id/color_picker_view"
            tools:layout_editor_absoluteX="0dp" />

    <Switch
            android:id="@+id/light_in_real_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/change_light_in_realtime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brightness_bar" />

    <TextView
            android:id="@+id/brightness_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/brightness_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_picker_view" />

    <Switch
            android:id="@+id/reset_after_effect_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/change_permanent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/light_in_real_time" />


</androidx.constraintlayout.widget.ConstraintLayout>